force-app/main/default/objects/Customer_Engagement__c/Customer_Engagement__c.object-meta.xml
<CustomObject>
    <description>This Object documents all interactions a Customer Success agent had with an account.</description>
    <label>Customer Engagement</label>
    <nameField>
        <displayFormat>CE# {00000000}</displayFormat>
        <label>Customer Engagement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>