force-app/main/default/objects/Customer_Engagement__c/fields/Likelihood_to_Renew__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Renew__c</fullName>
    <inlineHelpText>At the time of customer engagement, the chance of renewal</inlineHelpText>
    <label>Likelihood to Renew</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High (95%+)</fullName>
            </value>
            <value>
                <fullName>Medium-High (85-95%)</fullName>
            </value>
            <value>
                <fullName>Medium (75-85%)</fullName>
            </value>
            <value>
                <fullName>Medium-Low (50-75%)</fullName>
            </value>
            <value>
                <fullName>Low (&lt;50%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>