force-app/main/default/objects/Customer_Engagement__c/fields/Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues__c</fullName>
    <label>Open Issues</label>
    <type>TextArea</type>
</CustomField>