force-app/main/default/objects/Customer_Engagement__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Engagement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>VG</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>