force-app/main/default/objects/Customer_Engagement__c/recordTypes/Account_Management.recordType-meta.xml
<RecordType>
    <fullName>Account_Management</fullName>
    <active>true</active>
    <description>Customer Success Account Management Activity</description>
    <label>Account Management</label>
</RecordType>