force-app/main/default/objects/Customer_Engagement__c/recordTypes/Escalation.recordType-meta.xml
<RecordType>
    <fullName>Escalation</fullName>
    <active>true</active>
    <description>Customer Success Account Escalation</description>
    <label>Escalation</label>
</RecordType>