force-app/main/default/objects/Customer_Engagement__c/recordTypes/Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Onboarding</fullName>
    <active>true</active>
    <description>Customer Success Onboarding Activity</description>
    <label>Onboarding</label>
</RecordType>