force-app/main/default/objects/Customer_Engagement__c/recordTypes/Pre_Sale.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sale</fullName>
    <active>true</active>
    <description>Customer Success Pre-Sale Activity</description>
    <label>Pre-Sale</label>
</RecordType>