force-app/main/default/objects/Customer_Engagement__c/validationRules/Engagement_cannot_be_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_cannot_be_None</fullName>
    <active>true</active>
    <description>Add an Engagement Type</description>
    <errorConditionFormula>ISPICKVAL( Engagement_Type__c , &apos;None&apos;)</errorConditionFormula>
    <errorMessage>Engagement Type cannot be None. Please add an engagement type</errorMessage>
</ValidationRule>